<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recordatorios">

    <fragment
        android:id="@+id/navigation_recordatorios"
        android:name="com.example.u_health.ui.fragmentos.Recordatorios"
        android:label="@string/title_recordatorios"
        tools:layout="@layout/fragment_recordatorios" />

    <fragment
        android:id="@+id/navigation_informacion"
        android:name="com.example.u_health.ui.fragmentos.Informacion"
        android:label="@string/title_informacion"
        tools:layout="@layout/fragment_informacion" />

    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.example.u_health.ui.fragmentos.Mapa"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />
</navigation>