<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogin"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_capsula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtCorreo"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="#00FF00"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/Darkseagreen"
        app:helperTextTextColor="@color/DarkCyan"
        app:helperText="@string/HelperText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreo"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_correo"
            android:drawablePadding="8dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/DarkCyan" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtContraseña"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="#00FF00"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/Darkseagreen"
        app:helperText="@string/HelperText"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/DarkCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FondotxtCorreo"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContraseña"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/DarkCyan" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/Springgreen"
        android:hint="@string/btnIniciarSesion"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FondotxtContraseña" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Springgreen"
        android:hint="@string/btnRegistrarse"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="@dimen/Ancho1"
        android:layout_height="@dimen/Ancho1"
        android:layout_marginStart="@dimen/margen2"
        android:layout_marginTop="@dimen/margen3"
        android:layout_marginBottom="@dimen/margen4"
        android:background="@drawable/button_social"
        android:backgroundTint="?android:attr/colorBackground"
        android:contentDescription="@string/Google"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintVertical_bias="0.485"
        app:srcCompat="@drawable/ic_google" />

    <ImageButton
        android:id="@+id/btnFacebookSignIn"
        android:layout_width="@dimen/Ancho1"
        android:layout_height="@dimen/Ancho1"
        android:layout_marginStart="@dimen/margen2"
        android:layout_marginTop="@dimen/margen3"
        android:layout_marginBottom="@dimen/margen4"
        android:background="@drawable/button_social"
        android:backgroundTint="?android:attr/colorBackground"
        android:contentDescription="@string/Facebook"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGoogleSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageButton
        android:id="@+id/btnTwitterSignIn"
        android:layout_width="@dimen/Ancho1"
        android:layout_height="@dimen/Ancho1"
        android:layout_marginStart="@dimen/margen2"
        android:layout_marginTop="@dimen/margen3"
        android:layout_marginBottom="@dimen/margen4"
        android:background="@drawable/button_social"
        android:backgroundTint="?android:attr/colorBackground"
        android:contentDescription="@string/Twitter"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnFacebookSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:srcCompat="@drawable/ic_twitter" />


</androidx.constraintlayout.widget.ConstraintLayout>