<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkCyan">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtCrearCorreo"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        app:boxStrokeColor="#00FF00"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/Darkseagreen"
        app:helperTextTextColor="@color/DarkCyan"
        app:helperText="@string/HelperText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abCrearCuenta">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCrearCorreo"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_correo"
            android:drawablePadding="8dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/DarkCyan" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtCrearContraseña"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="#00FF00"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/Darkseagreen"
        app:helperText="@string/HelperText"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/DarkCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FondotxtCrearCorreo"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCrearContraseña"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/DarkCyan" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtConfContraseña"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="#00FF00"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/Darkseagreen"
        app:helperText="@string/HelperText"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/DarkCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FondotxtCrearContraseña"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmContraseña"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/ConfirmarContraseña"
            android:inputType="textPassword"
            android:textColor="@color/DarkCyan" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrearCuenta"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Springgreen"
        android:hint="@string/btnCrearCuenta"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FondotxtConfContraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>